dark mode colours fix

--- a/src/components/question-toggler/question-toggler.styles.scss
+++ b/src/components/question-toggler/question-toggler.styles.scss
@@ -41,6 +41,7 @@
       padding: 10px 20px;
       background-color: #d8f8dc;
       border-top: 1px solid #bff7c8;
+      color: black;
     }
   
     /* Opened accordion header styles */
