--- a/src/components/routes/purchase/purchase.styles.scss
+++ b/src/components/routes/purchase/purchase.styles.scss
@@ -18,6 +18,7 @@
     p {
       margin: 10px 0;
       font-size: 18px;
+      color: black;
   
       a {
         color: #007bff;
